--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,70 @@
 /* You can add global styles to this file, and also import other style files */
+
+.home-News {
+    i {        
+        color: grey;
+        font-size: 20px;
+        margin-top: 10px;
+        background: #dadada;
+        width: 43px;
+        text-align: center;
+        padding: 11px;
+        border-radius: 60px;
+    }
+    .source {
+        font-size: 12px;
+        margin-top: 10px;
+        background: #dadada;
+        width: 60px;
+        text-align: center;
+        padding: 3px 10px;
+        border-radius: 14px;
+    }
+}
+
+.mt-110 {
+    margin-top: 110px !important;    
+}
+
+.selected {
+    color: #000000 !important;
+}
+
+.fa, .cursor {
+    cursor: pointer;
+}
+
+@media(min-width: 1200px) {
+    .global-width {
+        width: 80% !important;
+        margin: auto;
+    }
+    
+}
+
+@media(min-width: 992px) and (max-width: 1199px) {
+    .global-width {       
+        margin: auto;
+    }  
+    
+}
+
+@media (max-width: 991px) {
+    .body-width {
+        width: 90% !important;
+        margin: auto;
+    }
+}
+
+@media (max-width: 767px) {   
+    .media {
+        display: block;
+        position: relative;
+        .fa-bookmark-o {
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
+    }
+   
+}
