list and bookmark features aded

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,7 +1,7 @@
 <!-- A grey horizontal navbar that becomes vertical on small screens -->
 <app-header></app-header>
 
-<!-- <div class="home-News global-width body-width home-top">
+<div class="home-News global-width body-width home-top">
     <div class="title">
         <h4 class="font-weight-bold">Top News</h4>
     </div>
@@ -17,7 +17,7 @@
         </div>
         <i class="" aria-hidden="true" (click)="bookmark(topNews[0])" [ngClass]="checkIsBookmarked(topNews[0]) == true ? 'fa fa-bookmark' : 'fa fa-bookmark-o'"></i>
       </div>
-</div> -->
+</div>
 
 <div class="home-News global-width body-width mt-5" >
     <div class="title">
